# MonoidPresentation

./: .gitignore  Makefile  Makefile.coq.local  README.md  _CoqProject  _CoqProject-no-database  _CoqProject-with-database  rocq-monoid-presentation.opam
.github/workflows/: blueprint.yml  nix-action-rocq-9.0-mc2.5.0.yml  nix-action-rocq-9.1-mc2.5.0.yml  nix-action-rocq-9.1-mcmaster.yml
.nix/: config.nix
blueprint/src/: biblio.bib  content.tex  print.tex  web.tex
database/: .gitignore  NOTICE  README.md  SA_certificate_format.md  check_proofs.py  checker_independent.py  checker_libsemigroups_pybind11.py  proof_parser.py  requirements.txt  to_rocq_proof.py
home_page/: _config.yml
home_page/_layouts/: default.html
theories/: array.v  batchchecker.v  bigcert.v  cert.v  certcheck.v  compress.v  criteria.v  database_dec.v  database_pres.v  entry_sample.v  enumnf.v  factor.v  fastcert.v  fasttransf.v  freecom.v  gilman.v  homogeneous.v  hypotheses.v  int_seq.v  inttrie.v  largest.v  monoids.v  monpres.v  nativeint.v  present.v  recursive.v  rewcert.v  samelen.v  sizelexi.v  stringmonoid.v  thms.v  trie.v  trie_rewrite.v  well_founded.v
theories/autocerts/: aaaaaa_abaaba.v  aaaaaaa_bbbabbb.v  aaabb_aabbbbbbab.v  aabbabb_aaababbbab.v  ababaaa_abaabab.v  baaaaabaa_aaaaaa.v  baaabaa_abbaaab.v  baaabaaaba_ababa.v  baaabba_abbaababa.v  baaabbaba_aaaaaaaaaa.v  baaba_ababaaaaba.v  baabaa_aabbbbabaa.v  baabaa_bababab.v  baabaaaa_aaaaaaaaaa.v  baabaabba_aaaabbaa.v  baababba_aabaababaa.v  baabbaaaba_abaaabba.v  baabbaabaa_aaa.v  baabbaba_abaaaaa.v  baabbbabaa_aaaaaabaa.v  baabbbba_abaabbaaaa.v  baba_abbaaaa.v  babaababa_aaaaababaa.v  bababbaa_abbbaabbaa.v  babba_abaaabaa.v  babbaabba_abbaabaaba.v  babbaba_aaababaaa.v  babbabbba_abaaaabbba.v  babbbabbba_aabbababa.v  babbbba_abaababba.v  babbbbbaba_aaaaaba.v  bb_aab.v  (+11 more)
(+45 files in other folders)
